# simcrat

./: .gitignore  Cargo.toml  README.md  rust-toolchain
.github/workflows/: ci.yml
deps_crate/: Cargo.toml
scripts/: bench_list  experiment.py  gnu.sh  run.sh  show_size.sh
src/: c_parser.rs  compiler.rs  graph.rs  lib.rs  openai_client.rs  pretty.rs  translation.rs
src/llm_client/: cache.rs  local.rs  mod.rs  openai.rs
