[package]
name = "simcrat"
version = "1.0.0"
authors = ["Jaemin Hong <hjm0901@gmail.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
lang-c = "0.15.0"
async-openai = "0.10.0"
tokio = { version = "1.26.0", features = ["rt"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tiktoken-rs = "0.3.2"
rustfix = "0.6.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0"
diff = "0.1.13"
