[package]
name = "simcrat"
version = "1.0.0"
authors = ["Jaemin Hong <hjm0901@gmail.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
lang-c = "0.15.0"
async-openai = "0.10.3"
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
rustfix = "0.6.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0"
diff = "0.1.13"
etrace = "1.1.1"
futures = "0.3.28"
mongodb = "2.4.0"
lazy_static = "1.4.0"
